notebook/jitfailure-dolfin_expression_274716df753cf87577170d851be33803/error.log
/tmp/tmp_9ow5moz/dolfin_expression_274716df753cf87577170d851be33803.cpp: In member function 'virtual void dolfin::dolfin_expression_274716df753cf87577170d851be33803::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp_9ow5moz/dolfin_expression_274716df753cf87577170d851be33803.cpp:61:34: error: invalid type argument of unary '*' (have 'int')
   61 |           values[0] = exp(-x[0]**2 - x[1]**2);
      |                                  ^
/tmp/tmp_9ow5moz/dolfin_expression_274716df753cf87577170d851be33803.cpp:61:44: error: invalid type argument of unary '*' (have 'int')
   61 |           values[0] = exp(-x[0]**2 - x[1]**2);
      |                                            ^
